updated cocotrade content

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <div class="hero-content">
             <h2 class="name">Hi! I'm Jennifer,</h2>
-            <p class="bio">a UI/UX designer based in Vancouver, BC focused in combining design skills and technical expertise to create human-centred solutions that helps connect complex systems with user needs. Skilled in front-end development, user research, usability testing, wireframing, prototyping, and design systems.</p>
+            <p class="bio">a creative and user-focused designer based in Vancouver, BC, creating accessible and user-friendly digital experiences across different platforms. Skilled in UI/UX design, graphic design, user research, wireframing, prototyping and front-end development (HTML, CSS, JavaScript). Experienced in translating complex ideas into simple, clear and engaging visuals.</p>
 
             <!-- scroll down button -->
             <button class="scroll-down" id="scroll-down-btn">
@@ -178,7 +178,7 @@
         </section>
 
         <!-- project 4 brief -->
-        <section class="projects">
+        <!-- <section class="projects">
             <div class="project-content">
                 <h3 class="project-title">Stashaway</h3>
                 <div class="project-subtitle">
@@ -193,17 +193,17 @@
                     </div>
                 </div>
                 <p class="project-description">An app that lets you easily find, book, and manage self-storage units, with the added convenience of seamless pickup and delivery services for your items.</p>
-            </div>
+            </div> -->
 
             <!-- view project button -->
-            <button class="view-project">
+            <!-- <button class="view-project">
                 <a href="">
                 <div class="project-image">
                     <img src="/images/stashaway-cover2.jpg" alt="stashaway-cover">
                 </div>
                 </a>
             </button>
-        </section>
+        </section> -->
 
     </main>
 
