--- a/pages/projects/cocotrade.html
+++ b/pages/projects/cocotrade.html
@@ -179,7 +179,7 @@
                     <h5 class="content-title">Timeline</h5>
                     <p>We completed Cocotrade over a 12-week timeline. We followed an agile workflow, with weekly sprints that included planning, design, development and testing phases. This approach allowed our cross-functional team to iterate quickly, deliver key features on schedule, and ensure continuous collaboration throughout the project.</p>
     
-                    <div class="timeline-images">
+                    <div id="cocotrade-bg-color-images" class="timeline-images">
                         <div class="image">
                             <img src="/images/cocotrade-images/timeline-image-1.jpg" alt="">
                         </div>
@@ -204,7 +204,7 @@
 
                     <div class="sub-content-wrapper">
                             <div class="sub-content-features">
-                                <i class="fa-solid fa-circle-plus"></i>
+                                <i class="fa-solid fa-money-bill-trend-up"></i>
                                 <h6 class="features">Real-time Market Pricing</h6>
                             </div>
                             <p>Monitor the ﬂuctuations and trends for coconut oil in the world market. In addition, the real-time market pricing will automatically adjust the suggested purchase price of copra for users.</p>
@@ -212,7 +212,7 @@
 
                     <div class="sub-content-wrapper">
                             <div class="sub-content-features">
-                                <i class="fa-solid fa-circle-plus"></i>
+                                <i class="fa-solid fa-warehouse"></i>
                                 <h6 class="features">Inventory Management</h6>
                             </div>
                             <p>Monitor and track inventory status, providing users with real-time updates and notiﬁcation reminders when the warehouse capacity is ready to make a shipment.</p>
@@ -220,7 +220,7 @@
 
                     <div class="sub-content-wrapper">
                             <div class="sub-content-features">
-                                <i class="fa-solid fa-circle-plus"></i>
+                                <i class="fa-solid fa-chart-column"></i>
                                 <h6 class="features">Finance Management</h6>
                             </div>
                             <p>Keep track of copra sales and purchases, with detailed yearly, monthly and weekly reports to monitor and analyze proﬁt margins and the business’s ﬁnancial status.</p>
@@ -242,7 +242,7 @@
                             <h6 class="parts-title">Brainstorming</h6>
                             <p>Our team conducted multiple brainstorming sessions to map out the user journey and identify pain points. We asked critical questions about the day-to-day operations, the tools currently in use, and the frustrations experienced by traders. These sessions helped us uncover key problems and define which features would be essential for our MVP. This early phase of research laid the foundation for our design decisions and ensured we were building a solution grounded in real user needs.</p>
                         </div>
-                        <div class="brainstorming-images">
+                        <div id="cocotrade-bg-color-images" class="brainstorming-images">
 
                             <div class="image">
                                 <img src="/images/cocotrade-images/brainstorming-all.png" alt="">
@@ -283,7 +283,7 @@
                         <p>Enterprise tools like SAP offer a wide range of features for many industries, but they are complex, expensive to customize, and require technical expertise—making them unsuitable for small businesses like copra trading. Arctic Data is more flexible but still requires a lot of resources, dedicated roles, and setup time, which can be overwhelming for small family-run operations.</p>
                         <p>These challenges show a clear need for a simple, affordable, and easy-to-use solution. CocoTrade was built specifically for small to medium-sized copra traders in Southeast Asia, offering just the right features to manage pricing, inventory, and sales—without the extra cost or complexity.</p>
 
-                        <div class="sub-content-images">
+                        <div id="cocotrade-bg-color-images" class="sub-content-images">
                             <img src="/images/cocotrade-images/competitive-analysis.jpg" alt="">
                         </div>
                     </div>
@@ -292,8 +292,8 @@
 
                 <div id="userflow" class="content">
                     <h5 class="content-title">Userflow</h5>
-                    <div class="sub-content-images">
-                        <img src="/images/cocotrade-images/userflow.png" alt="">
+                    <div id="cocotrade-bg-color-images" class="sub-content-images">
+                        <img src="/images/cocotrade-images/userflow-1.png" alt="">
                     </div>
                 </div>
 
@@ -307,8 +307,8 @@
                         </div>
                         <p>This was one a crucial step in ensuring the usability of the app. Through multiple iterations, we focused on the simplicity and accessibility to accommodate our target users who are primarily middle-aged and older adults.</p>
 
-                        <div class="sub-content-images">
-                            <img src="/images/cocotrade-wireframes.png" alt="">
+                        <div id="cocotrade-bg-color-images" class="sub-content-images">
+                            <img src="/images/cocotrade-images/cocotrade-wireframes.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -319,7 +319,7 @@
                     <div class="sub-content-wrapper">
                         <p>The logo of Cocotrade is a representation of palm leaves, which symbolizes sustainability and the tree where copra is from, with the bar charts representing the platform’s data-dhriven insights and analytics </p>
 
-                        <div class="sub-content-images">
+                        <div id="cocotrade-bg-color-images"class="sub-content-images">
                             <div class="image">
                                 <img src="/images/cocotrade-branding-logo.png" alt="">
                             </div>
@@ -342,7 +342,7 @@
                     <h5 class="content-title">Mockups</h5>
 
                     <div class="sub-content-wrapper">
-                        <div class="sub-content-images">
+                        <div id="cocotrade-bg-color-images" class="sub-content-images">
                             <img src="/images/cocotrade-mockups.png" alt="">
                         </div>
                     </div>
@@ -353,7 +353,7 @@
                     <h5 class="content-title">Bug Tracking</h5>
                     <p>Add description</p>
 
-                    <div class="sub-content-images">
+                    <div id="cocotrade-bg-color-images" class="sub-content-images">
                         <img src="/images/cocotrade-images/bug-tracking.png" alt="">
                     </div>
 
