--- a/pages/projects/glucofit.html
+++ b/pages/projects/glucofit.html
@@ -151,7 +151,7 @@
                     <ul>
                         <li><a href="https://glucofit.ca/" target="_blank">Website</a></li>
                         <li><a href="https://www.youtube.com/watch?v=QoHt4UhI6Jk" target="_blank">Demo</a></li>
-                        <li><a href="../docs/glucofit_project_proposal.pdf" target="_blank">Proposal</a></li>
+                        <li><a href="/docs/glucofit_project_proposal.pdf" target="_blank">Proposal</a></li>
                     </ul>
                 </nav>
             </div>
@@ -313,45 +313,45 @@
 
                     <div class="sub-content-wrapper">
                         <div class="sub-content">
-                            <h5 class="subtitle">High Fidelity Wireframes</h5>
+                            <h5 class="subtitle">High-Fidelity Wireframes</h5>
                             <h6 class="parts-title">Homescreen</h6>
-                            <p>Add description here</p>
+                            <p>The homescreen was designed to be as simple and intuitive as possible. In the initial wireframes, we used line graph to display glucose trend. However, based on user testing feedback, we found that users found bar graphs easier to read and interpret. This made us revise the visualization to a bar graph, to improve clarity and usability for our target audience.</p>
                         </div>
                         <div class="sub-content-images">
                             <img src="/images/glucofit-images/mockups-homescreen.png" alt="">
                         </div>
 
                         <div class="sub-content">
-                            <h5 class="subtitle">High Fidelity Wireframes</h5>
+                            <h5 class="subtitle">High-Fidelity Wireframes</h5>
                             <h6 class="parts-title">Glucose Automatic Logging</h6>
-                            <p>Add description here</p>
+                            <p>The auto-logging feature is one of the projects core functionalities. It was also the most technically challenging to implement. This feature enables the app to automatically connect with a glucometer via bluetooth and seamlessly transfer glucose readings to the smartphone. This feature makes glucose monitoring more convenient and efficient for users.</p>
                         </div>
                         <div class="sub-content-images">
                             <img src="/images/glucofit-images/mockups-auto-logging.png" alt="">
                         </div>
 
                         <div class="sub-content">
-                            <h5 class="subtitle">High Fidelity Wireframes</h5>
+                            <h5 class="subtitle">High-Fidelity Wireframes</h5>
                             <h6 class="parts-title">Personalized Insights</h6>
-                            <p>Add description here</p>
+                            <p>The personalized insights feature provides users with tailored articles and recommendations based on their daily glucose readings. Whether it's related to wellness, nutrition, or medication, the app generates content relevant to each user's condition to help them better understand their health and make informed lifestyle choices to improve their overall well-being</p>
                         </div>
                         <div class="sub-content-images">
                             <img src="/images/glucofit-images/mockups-insights.png" alt="">
                         </div>
 
                         <div class="sub-content">
-                            <h5 class="subtitle">High Fidelity Wireframes</h5>
+                            <h5 class="subtitle">High-Fidelity Wireframes</h5>
                             <h6 class="parts-title">Settings</h6>
-                            <p>Add description here</p>
+                            <p>The settings page allows users to manage their profile, update health information and edit or add medicine reminders as needed.</p>
                         </div>
                         <div class="sub-content-images">
                             <img src="/images/glucofit-images/mockups-settings.png" alt="">
                         </div>
 
                         <div class="sub-content">
-                            <h5 class="subtitle">High Fidelity Wireframes</h5>
+                            <h5 class="subtitle">High-Fidelity Wireframes</h5>
                             <h6 class="parts-title">Gamification</h6>
-                            <p>Add description here</p>
+                            <p>The gamification feature encourages users to log their glucose levels consistently by rewarding them with badges, streaks, and milestones, making health tracking more engaging and habit-forming.</p>
                         </div>
                         <div class="sub-content-images">
                             <img src="/images/glucofit-images/mockups-gamification.png" alt="">
@@ -409,7 +409,7 @@
 
                 <div id="bugtracking" class="content">
                     <h5 class="content-title">Bug Tracking</h5>
-                    <p>Add description</p>
+                    <p>Before launching Glucofit’s MVP, we conducted beta testing and bug tracking to ensure a smooth and functional user experience. My co-designer, Kath Nervez, and I thoroughly tested the app, identifying bugs and usability issues, and submitted detailed tickets to the development team. This process not only helped us catch and resolve technical glitches, but also allowed us to verify the accuracy of our design implementation, ensuring consistency between what was designed and what was developed.</p>
 
                     <div class="sub-content-images">
                         <img src="/images/glucofit-images/bugbash.png" alt="">
@@ -419,7 +419,9 @@
 
                 <div id="takeaways" class="content">
                     <h5 class="content-title">Takeaways</h5>
-                    <p>Add description</p>
+                    <p>When our developers struggled to integrate the glucometer with the smartphone, we thought it might not be feasible within our timeline. Although eventually they made it work, this caused delays and led some features being dropped. This experience taught me the importance of <span>prioritizing core features, communicating challenges early and recognizing that asking for help is a neccessary part of building a successful product.</span></p>
+
+                    <p>From a design standpoint, I learned that strong communication and collaboration are key to creating a consistent and cohesive user experience. At one point, a lack of clarity in task assignments led to duplicated work between desingers. This reinforced the value of regular check-ins, clear task assignments to keep the team aligned and avoid duplication.</p>
 
                 </div>
 
