--- a/pages/projects/cocotrade.html
+++ b/pages/projects/cocotrade.html
@@ -311,42 +311,74 @@
                             <img src="/images/cocotrade-images/cocotrade-wireframes.png" alt="">
                         </div>
                     </div>
+
+                    <div class="sub-content-wrapper">
+                        <div class="sub-content">
+                            <h5 class="subtitle">High-Fidelity Wireframes</h5>
+                            <h6 class="parts-title">Dashboard</h6>
+                            <p>Add description</p>
+                        </div>
+                        <div id="cocotrade-bg-color-images" class="sub-content-images">
+                            <img src="/images/cocotrade-images/mockups-dashboard.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="sub-content-wrapper">
+                        <div class="sub-content">
+                            <h5 class="subtitle">High-Fidelity Wireframes</h5>
+                            <h6 class="parts-title">Dashboard</h6>
+                            <p>Add decription</p>
+                        </div>
+                        <div id="cocotrade-bg-color-images" class="sub-content-images">
+                            <img src="/images/cocotrade-images/mockups-inventory1.png" alt="">
+                            <img src="/images/cocotrade-images/mockups-inventory2.png" alt="">
+                            <img src="/images/cocotrade-images/mockups-inventory3.png" alt="">
+                            <img src="/images/cocotrade-images/mockups-inventory4.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="sub-content-wrapper">
+                        <div class="sub-content">
+                            <h5 class="subtitle">High-Fidelity Wireframes</h5>
+                            <h6 class="parts-title">Landing Page, On-Boarding, Settings, Finance, Purchase and Sales Log</h6>
+                            <p>Add decription</p>
+                        </div>
+                        <div id="cocotrade-bg-color-images" class="sub-content-images">
+                            <img src="/images/cocotrade-images/mockups-other-screens.png" alt="">
+                        </div>
+                    </div>
                 </div>
 
                 <div id="uidesign" class="content">
-                    <h5 class="content-title">Branding</h5>
+                    <h5 class="content-title">UI Design</h5>
 
                     <div class="sub-content-wrapper">
-                        <p>The logo of Cocotrade is a representation of palm leaves, which symbolizes sustainability and the tree where copra is from, with the bar charts representing the platform’s data-dhriven insights and analytics </p>
+                        <div class="sub-content">
+                            <!-- <h5 class="subtitle">UI Design</h5> -->
+                            <h6 class="parts-title">Logo</h6>
+                        </div>
+                        <p>Add description</p>
 
                         <div id="cocotrade-bg-color-images"class="sub-content-images">
                             <div class="image">
-                                <img src="/images/cocotrade-branding-logo.png" alt="">
+                                <img src="/images/cocotrade-images/branding.png" alt="">
                             </div>
-                            <div class="image">
-                                <img src="/images/cocotrade-typography.png" alt="">
-                            </div>
-                            <div class="image">
-                                <img src="/images/cocotrade-components-1.png" alt="">
-                            </div>
-                            <div class="image">
-                                <img src="/images/cocotrade-components-2.png" alt="">
-                            </div>
-                            
                         </div>
                     </div>
-
-                </div>
-
-                <div id="mockups" class="content">
-                    <h5 class="content-title">Mockups</h5>
 
                     <div class="sub-content-wrapper">
-                        <div id="cocotrade-bg-color-images" class="sub-content-images">
-                            <img src="/images/cocotrade-mockups.png" alt="">
+                        <div class="sub-content">
+                            <!-- <h5 class="subtitle">UI Design</h5> -->
+                            <h6 class="parts-title">UI Kit</h6>
+                        </div>
+                        <p>Our logo features a sugar cube that our team called "Sugar Baby". In this way, our app gives a fresh take on glucose management while balancing irony with approachability. We used plus and minus symbols for the eyes to indicate glucose highs and lows.</p>
+
+                        <div id="cocotrade-bg-color-images"class="sub-content-images">
+                            <div class="image">
+                                <img src="/images/cocotrade-images/uikit.png" alt="">
+                            </div>
                         </div>
                     </div>
-                    
                 </div>
 
                 <div id="bugtracking" class="content">
