--- a/pages/projects/cocotrade.html
+++ b/pages/projects/cocotrade.html
@@ -118,9 +118,9 @@
                 <h4 class="sub-nav">Context</h4>
                 <nav class="container-nav">
                     <ul>
-                        <li><a href="#problem">Overview</a></li>
-                        <li><a href="#problem">My Role</a></li>
-                        <li><a href="#problem">Timeline</a></li>
+                        <li><a href="#overview">Overview</a></li>
+                        <li><a href="#myrole">My Role</a></li>
+                        <li><a href="#timeline">Timeline</a></li>
                         <li><a href="#problem">Problem</a></li>
                         <li><a href="#solution">Solution</a></li>
                     </ul>
@@ -133,9 +133,10 @@
                 <nav class="container-nav">
                     <ul>
                         <li><a href="#research">Research</a></li>
+                        <li><a href="#userflow">Userflow</a></li>
                         <li><a href="#wireframes">Wireframes</a></li>
-                        <li><a href="#branding">Branding</a></li>
-                        <li><a href="#mockups">Mockup</a></li>
+                        <li><a href="#uidesign">UI Design</a></li>
+                        <li><a href="#bugtracking">Bug Tracking</a></li>
                         <li><a href="#takeaways">Takeaways</a></li>
                     </ul>
                 </nav>
@@ -316,7 +317,7 @@
                         <div class="sub-content">
                             <h5 class="subtitle">High-Fidelity Wireframes</h5>
                             <h6 class="parts-title">Dashboard</h6>
-                            <p>Add description</p>
+                            <p>The dashboard provides traders a quick overview of their daily operations. It displays the real-time market price of palm oil alongside the current copra purchase price for farmers, helping users stay updated with market fluctuations. The dashboard also includes an inventory trend chart, a summary of recent purchases and sales for the day and a month-to-month comparison, giving traders valuable insights into their business performance at a glance.</p>
                         </div>
                         <div id="cocotrade-bg-color-images" class="sub-content-images">
                             <img src="/images/cocotrade-images/mockups-dashboard.png" alt="">
@@ -326,8 +327,8 @@
                     <div class="sub-content-wrapper">
                         <div class="sub-content">
                             <h5 class="subtitle">High-Fidelity Wireframes</h5>
-                            <h6 class="parts-title">Dashboard</h6>
-                            <p>Add decription</p>
+                            <h6 class="parts-title">Inventory</h6>
+                            <p>It is one of the core features of Cocotrade, giving users a simple way to monitor and manage their copra inventory. In this feature, traders can view both stored and shipped copra, track inventory levels and plan upcoming shipments. It also provides a summary of recent sales, helping users stay on top of their operations at a glance.</p>
                         </div>
                         <div id="cocotrade-bg-color-images" class="sub-content-images">
                             <img src="/images/cocotrade-images/mockups-inventory1.png" alt="">
@@ -341,7 +342,6 @@
                         <div class="sub-content">
                             <h5 class="subtitle">High-Fidelity Wireframes</h5>
                             <h6 class="parts-title">Landing Page, On-Boarding, Settings, Finance, Purchase and Sales Log</h6>
-                            <p>Add decription</p>
                         </div>
                         <div id="cocotrade-bg-color-images" class="sub-content-images">
                             <img src="/images/cocotrade-images/mockups-other-screens.png" alt="">
@@ -357,7 +357,20 @@
                             <!-- <h5 class="subtitle">UI Design</h5> -->
                             <h6 class="parts-title">Logo</h6>
                         </div>
-                        <p>Add description</p>
+                        <p>The logo of Cocotrade is a representation of palm leaves, which symbolizes sustainability and the tree where copra is from, with the bar charts representing the platform’s data-driven insights and analytics</p>
+
+                        <div class="sub-content">
+                            <!-- <h5 class="subtitle">UI Design</h5> -->
+                            <h6 class="parts-title">Typography</h6>
+                        </div>
+                        <p>Rasa typeface was chosen to be used for headings because of its classic serif characteristics with modern details. This serif font also conveys a sense of tradition and reliability.</p>
+                        <p>DM typeface was chosen for body texts and headings in dashboard. Its clean lines and simple forms ensure that text remains clear and readable. It also has a nice contrast with the serif style of Rasa.</p>
+
+                        <div class="sub-content">
+                            <!-- <h5 class="subtitle">UI Design</h5> -->
+                            <h6 class="parts-title">Color</h6>
+                        </div>
+                        <p>Orange was used because of its warm color and bluegreen that represents nature and stability.</p>
 
                         <div id="cocotrade-bg-color-images"class="sub-content-images">
                             <div class="image">
@@ -371,7 +384,7 @@
                             <!-- <h5 class="subtitle">UI Design</h5> -->
                             <h6 class="parts-title">UI Kit</h6>
                         </div>
-                        <p>Our logo features a sugar cube that our team called "Sugar Baby". In this way, our app gives a fresh take on glucose management while balancing irony with approachability. We used plus and minus symbols for the eyes to indicate glucose highs and lows.</p>
+                        <p></p>
 
                         <div id="cocotrade-bg-color-images"class="sub-content-images">
                             <div class="image">
@@ -383,7 +396,7 @@
 
                 <div id="bugtracking" class="content">
                     <h5 class="content-title">Bug Tracking</h5>
-                    <p>Add description</p>
+                    <p>Our team conducted both alpha and beta bug tracking to ensure functionality and design consistency during implementation. This process was essential in refining the product and allowed us to present the project at its best.</p>
 
                     <div id="cocotrade-bg-color-images" class="sub-content-images">
                         <img src="/images/cocotrade-images/bug-tracking.png" alt="">
@@ -393,7 +406,7 @@
     
                 <div id="takeaways" class="content">
                     <h5 class="content-title">Takeaways</h5>
-                    <p>As the lead UI/UX designer, I focused on crafting the inventory and dashboard pages through multiple iterations, ensuring they were intuitive and user-friendly. Recognizing these screens as the most frequently used by our users, I collaborated closely with my co-designers, actively seeking and incorporating their feedback to refine the design. This iterative process taught me the importance of teamwork and user-centered design in delivering interfaces that balance functionality with ease of use.</p>
+                    <p>Coordinating closely with our PM and lead developer, I ensured that the design vision stayed aligned with technical feasibility and project goals. One of the biggest challenges I encountered was the gap between our Figma designs and the developers’ implementation, which often led to inconsistencies in spacing, typography, or component usage. To address this, I advocated for and organized bug bash sessions during both the alpha and beta stages. These sessions brought designers and developers together to review the product in real time, identify visual and functional discrepancies, and resolve them collaboratively. Not only did this process improve the final quality of the product, but it also strengthened communication within the team and highlighted the value of iterative testing. My key takeaway is that effective design leadership goes beyond creating screens—it involves building bridges between design and development, fostering open feedback loops, and ensuring that the final product truly reflects the intended user experience.</p>
                 </div>
              </div>
 
