updated navbar and attached resume

--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
             <!-- main navigation -->
             <nav class="main-nav">
                 <ul>
-                    <li><a href="">Projects</a></li>
+                    <!-- <li><a href="">Projects</a></li> -->
                     <!-- <li><a href="#gallery">Gallery</a></li> -->
-                    <li><a href="">About</a></li>
+                    <!-- <li><a href="">About</a></li> -->
                     <li><a href="https://www.linkedin.com/in/jennifergmallari/">Linkedin</a></li>
+                    <li><a href="/docs/Mallari_Jennifer_CV.pdf">Resume</a></li>
                     <li><a href="mailto:jennifergmallari@gmail.com">Contact</a></li>
+                    
                 </ul>
             </nav>
 
@@ -100,7 +102,7 @@
                 <a href="">
                 <div class="project-image">
                     <!-- <div class="img-container"> -->
-                        <img src="/images/innovaterecreation-cover.png" alt="glucofit-cover">
+                        <img src="/images/ideas-cover.png" alt="glucofit-cover">
                     <!-- </div> -->
                 </div>
                 </a>
