--- a/pages/projects/glucofit.html
+++ b/pages/projects/glucofit.html
@@ -30,10 +30,11 @@
             <!-- main navigation -->
             <nav class="main-nav">
                 <ul>
-                    <li><a href="">Projects</a></li>
+                    <!-- <li><a href="">Projects</a></li> -->
                     <!-- <li><a href="#gallery">Gallery</a></li> -->
-                    <li><a href="../about.html">About</a></li>
+                    <!-- <li><a href="">About</a></li> -->
                     <li><a href="https://www.linkedin.com/in/jennifergmallari/">Linkedin</a></li>
+                    <li><a href="/docs/Mallari_Jennifer_CV.pdf">Resume</a></li>
                     <li><a href="mailto:jennifergmallari@gmail.com">Contact</a></li>
                 </ul>
             </nav>
