updatedresume source in glucofit and cocotrade

--- a/pages/projects/cocotrade.html
+++ b/pages/projects/cocotrade.html
@@ -442,7 +442,7 @@
                             <i aria-hidden="true" title="Linkedin"></i>
                                 <span>Linkedin</span>
                         </a>
-                        <a href="../docs/mallarijenniferg-resume.pdf" target="_blank">Resume</a>
+                        <a href="/docs/Mallari_Jennifer_CV.pdf" target="_blank">Resume</a>
                     </div>
                 </div>
     
