--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="hero-content">
             <h2 class="name">Hi! I'm Jennifer,</h2>
-            <p class="bio">a creative and user-focused designer based in Vancouver, BC, creating accessible and user-friendly digital experiences across different platforms. Skilled in UI/UX design, graphic design, user research, wireframing, prototyping and front-end development (HTML, CSS, JavaScript). Experienced in translating complex ideas into simple, clear and engaging visuals.</p>
+            <p class="bio">a creative, versatile designer passionate about simplifying complex ideas into clear and engaging experiences. My work spans web design, visual storytelling and digital campaigns—creating designs that are clear, engaging, and easy for people to connect with.</p>
 
             <!-- scroll down button -->
             <button class="scroll-down" id="scroll-down-btn">
