--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="hero-content">
             <h2 class="name">Hi! I'm Jennifer,</h2>
-            <p class="bio">a creative, versatile designer passionate about simplifying complex ideas into clear and engaging experiences. My work spans web design, visual storytelling and digital campaigns—creating designs that are clear, engaging, and easy for people to connect with.</p>
+            <p class="bio">Creative, user-focused designer based in Vancouver, BC, creating accessible and user-friendly digital experiences across different platforms. Skilled in web design, visual storytelling and digital campaigns—creating designs that are clear, engaging, and easy for people to connect with.</p>
 
             <!-- scroll down button -->
             <button class="scroll-down" id="scroll-down-btn">
